작업 덮어쓰기

--- a/pages/layout/header.html
+++ b/pages/layout/header.html
@@ -5,7 +5,7 @@
         </a>
         <div class="right-group">
             <div class="profile-box">
-                <i class="h-ico md profile">프로필</i>
+                <i class="h-ico md profile-blue">프로필</i>
                 <strong class="name">홍길동</strong>&nbsp;님
             </div>
             <div class="timer-box">
