--- a/pages/layout/lnb.html
+++ b/pages/layout/lnb.html
@@ -84,8 +84,8 @@
     <!-- 하단 고정영역 -->
     <div class="sidebar-foot">
         <div class="btn-box">
-            <button type="button" class="h-btn"><i class="h-ico xsm mail">메일</i><span>나의 업무 보관함</span></button>
-            <button type="button" class="h-btn lnb-close"><i class="h-ico xsm close">닫기</i></button>
+            <button data-role="button" class="blue"><i class="h-ico xsm mail">메일</i><span>나의 업무 보관함</span></button>
+            <button data-role="button" class="light-blue-border"><i class="h-ico xsm lnb-close">닫기</i></button>
         </div>
     </div>        
 </aside>
