--- a/resources/css/scss/_colors.scss
+++ b/resources/css/scss/_colors.scss
@@ -33,6 +33,9 @@ $marine-blue: #002a70;
 $btn-light-blue-hover-bg: #99b6e2;
 $btn-blue-border-hover-bg: #e4e9ef;
 
+$green-light: #d4eee0;
+
+
 $green: #1e6c42;
 $green-dark: #0d5a30;
 
