--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -220,6 +220,7 @@ body {
 			position: relative;
 			padding-left: 49px;
 			color: $gray-5;
+			line-height: 36px;
 			transition: color 0.3s ease;
 			&:hover {
 				color: $main;
