--- a/resources/css/scss/modules/_table.scss
+++ b/resources/css/scss/modules/_table.scss
@@ -1,5 +1,15 @@
 
 
+table {
+    display: table;
+    width: 100%;
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+.table-group + .table-group {
+    margin-top :30px;
+}
 .table-set {
     margin-top: 12px;
 }
@@ -7,39 +17,9 @@
     table {
 		// table-layout: fixed;
 	}
-    th, td {
-        height: 36px;
-        padding: 0 10px;
-    }
-    thead th, thead td {
-        background: $searchLine;
-        text-align: left;
-        color: $gray-5;
-    }
-    tbody th, tbody td { 
-        background: $white;
-        color: $gray-2;
-    }
-    tr th:first-child, tr td:first-child {
-        border-left: 0;
-    }
-    tr th:last-child, tr td:last-child {
-        border-right: 0;
-    }
+    
 }
-table {
-	width: 100%;
-	border-collapse: collapse;
-}
-thead th {
-	text-align: center;
-}
-tr td {
-    transition: background 0.3s ease;
-}
-tr:hover td {
-    background-color: $tableBG1;
-}
+
 .text-center th,
 .text-center td {
 	text-align: center !important;
