--- a/resources/css/scss/_layout.scss
+++ b/resources/css/scss/_layout.scss
@@ -267,7 +267,7 @@ body {
 	right: 20px;
 	width: 15px;
 	height: 15px;
-	background-image: url("./../images/icon/icon_arrow_down.svg");
+	background-image: url("../images/icon/icon_arrow_down.svg");
 	background-repeat: no-repeat;
 	background-size: 15px 15px;
 	text-align: center;
