--- a/resources/css/scss/_overrides.scss
+++ b/resources/css/scss/_overrides.scss
@@ -32,7 +32,7 @@
 			background-color: $gray-f5;
 			color: $gray-a;
 			.k-i-arrow-60-down:before {
-				background-image: url("./../images/icon/icon_arrow_down_diabled.svg");
+				background-image: url("../images/icon/icon_arrow_down_diabled.svg");
 			}
 		}
 		&.k-state-hover,
@@ -66,7 +66,7 @@
 			right: 10px;
 			width: 15px;
 			height: 15px;
-			background: url("./../images/icon/icon_arrow_down.svg") no-repeat center / 15px 15px;
+			background: url("../images/icon/icon_arrow_down.svg") no-repeat center / 15px 15px;
 			transition: all 0.3s ease;
 		}
 		&.k-state-active {
@@ -216,7 +216,7 @@
 				background-size: 8px 15px;
 				background-repeat: no-repeat;
 				background-position: center center;
-				background-image: url("./../images/icon/btn_filter_default.svg");
+				background-image: url("../images/icon/btn_filter_default.svg");
 			}
 		}
 	}
@@ -239,11 +239,11 @@
 	}
 	.k-i-sort-desc-sm:before {
 		//아래로 화살표
-		background-image: url("./../images/icon/btn_filter_down.svg");
+		background-image: url("../images/icon/btn_filter_down.svg");
 	}
 	.k-i-sort-asc-sm:before {
 		//위로 화살표
-		background-image: url("./../images/icon/btn_filter_up.svg");
+		background-image: url("../images/icon/btn_filter_up.svg");
 	}
 }
 
