--- a/resources/css/index.css
+++ b/resources/css/index.css
@@ -1303,7 +1303,7 @@ td .form-box, th .form-box {
   display: block;
   width: 18px;
   height: 18px;
-  background-image: url("./../images/icon/icon_search.svg");
+  background-image: url("../images/icon/icon_search.svg");
   background-size: 18px 18px;
 }
 .input-box.search .h-input {
@@ -1372,21 +1372,21 @@ td .form-box, th .form-box {
 }
 
 .h-checkbox input[type=checkbox] + label::before {
-  background-image: url("./../images/icon/btn_checkbox_off.svg");
+  background-image: url("../images/icon/btn_checkbox_off.svg");
   transition: background 0.3s ease;
 }
 
 .h-checkbox input[type=radio] + label::before {
-  background-image: url("./../images/icon/btn_radio_default.svg");
+  background-image: url("../images/icon/btn_radio_default.svg");
   transition: background 0.3s ease;
 }
 
 .h-checkbox input[type=checkbox]:checked + label::before {
-  background-image: url("./../images/icon/btn_checkbox_checked.svg");
+  background-image: url("../images/icon/btn_checkbox_checked.svg");
 }
 
 .h-checkbox input[type=radio]:checked + label::before {
-  background-image: url("./../images/icon/btn_radio_checked.svg");
+  background-image: url("../images/icon/btn_radio_checked.svg");
 }
 
 /*
@@ -1728,7 +1728,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .h-ico.bookmark.active {
-  background-image: url("./../images/icon/btn_bookmark_active.svg");
+  background-image: url("../images/icon/btn_bookmark_active.svg");
 }
 .h-ico.search {
   width: 18px;
@@ -1737,7 +1737,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .h-ico.search:disabled {
-  background-image: url("./../images/icon/icon_search_disabled.svg");
+  background-image: url("../images/icon/icon_search_disabled.svg");
 }
 .h-ico.blue {
   width: 18px;
@@ -1814,7 +1814,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .h-ico.tip:hover {
-  background-image: url("./../images/icon/btn_tip_hover.svg");
+  background-image: url("../images/icon/btn_tip_hover.svg");
 }
 
 .k-i-filter {
@@ -1873,7 +1873,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .k-i-bookmarkactive {
-  background-image: url("./../images/icon/btn_bookmark_active.svg");
+  background-image: url("../images/icon/btn_bookmark_active.svg");
 }
 .k-i-search {
   width: 18px;
@@ -1882,7 +1882,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .k-i-search:disabled {
-  background-image: url("./../images/icon/icon_search_disabled.svg");
+  background-image: url("../images/icon/icon_search_disabled.svg");
 }
 .k-i-search-blue {
   width: 18px;
@@ -1959,7 +1959,7 @@ td .form-box, th .form-box {
   background-size: contain;
 }
 .k-i-tip:hover {
-  background-image: url("./../images/icon/btn_tip_hover.svg");
+  background-image: url("../images/icon/btn_tip_hover.svg");
 }
 
 .k-checkbox-label,
@@ -6465,7 +6465,7 @@ td .form-box, th .form-box {
   white-space: nowrap;
   width: 124px;
   height: 18px;
-  background: url("./../images/gms_ci_ko@3x.png") no-repeat center/contain;
+  background: url("../images/gms_ci_ko@3x.png") no-repeat center/contain;
 }
 .header-wrap .logo-info {
   font-size: 16px;
