--- a/resources/css/scss/modules/_input.scss
+++ b/resources/css/scss/modules/_input.scss
@@ -81,7 +81,7 @@
 			display: block;
 			width: 18px;
 			height: 18px;
-			background-image: url('./../images/icon/icon_search.svg');
+			background-image: url('../images/icon/icon_search.svg');
 			background-size: 18px 18px;
 		}
 		.h-input {
